# GraphDecimator

./: CMakeLists.txt  datadecimator.cpp  datadecimator.h  func.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  point.h
